--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,7 @@ header{
 }
 
 .nav-list li{
+  
 
   text-decoration: none;
   color:#41b1a5;
@@ -55,6 +56,53 @@ header{
   border: 1px solid #ccc; /* Borde opcional para resaltar cada elemento */
 }
 
+.tarjetas li div{
+
+  display: flex;
+  justify-content: center; /* Centra horizontalmente */
+  align-items: center; /* Centra verticalmente */
+  height: 15rem; /* Ajusta la altura según tus necesidades */
+}
+.card-side.back {
+  transform: rotateY(-180deg);
+  background-color: #4158D0;
+  background-image: linear-gradient(43deg, #4158D0 0%,#C850C0 46%, #FFCC70 100%);
+}
+.card-side.front {
+  
+  background-color: #0093E9;
+  background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+}
+
+.card:hover .card-side.front {
+  transform: rotateY(180deg);
+}
+
+.card:hover .card-side.back {
+  transform: rotateY(0deg);
+}
+.card {
+  perspective: 150rem;
+  margin: 2em auto;
+  height: 5rem;
+  width: 10rem;
+  max-width: 400px;
+  box-shadow: none;
+  background: none;
+}
+.card-side {
+  
+  height: 10rem;
+  border-radius: 15px;
+  transition: all 0.8s ease;
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 2rem;
+  color: white;
+}
 
 
 
@@ -83,15 +131,10 @@ header{
     opacity: 1;
     visibility: visible;
   }
-
-
   .nav-list{
     flex-direction: column;
     align-items: end;
-  }
-
-  
-  
+  } 
 }
 
 
