--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,8 @@ header{
   align-items: center;
   justify-content: space-between;
   padding: 2rem;
-  background-color: #41b1a5;
+  background-color: #7AD8CD;
+  border:0.5rem solid #41b1a5;
 }
 
 .logo{
@@ -34,7 +35,7 @@ header{
 
 .nav-list li{
   text-decoration: none;
-  color:#41b1a5;
+  color:#7AD8CD;
 }
 
 /*Esta clase debe estar en display none para que no se vea en desktop*/
@@ -142,14 +143,7 @@ rgb(37,80,0);
     align-items: end;
   } 
 }
-.contenedor-tf {
-  position: static;
-  width: 100vw; /* Ancho igual al ancho de la ventana del navegador */
-  height: 15vh; /* Altura igual a la altura de la ventana del navegador */
-  background-color: #7ad8cd; /* Color de fondo del rectángulo */
-  border:0.5rem solid #41b1a5;
-  overflow: hidden; /* Evita que el rectángulo se desborde de la ventana */
-}
+
 .contenedor-c {
   position: static;
   width: 100vw; /* Ancho igual al ancho de la ventana del navegador */
@@ -161,7 +155,7 @@ rgb(37,80,0);
 .contenedor-f {
   position: static;
   width: 100vw; /* Ancho igual al ancho de la ventana del navegador */
-  height: 5vh; /* Altura igual a la altura de la ventana del navegador */
+  height: 8vh; /* Altura igual a la altura de la ventana del navegador */
   background-color: #90d55e; /* Color de fondo del rectángulo */
   border:0.5rem solid #449c3c;
   overflow: hidden; /* Evita que el rectángulo se desborde de la ventana */
@@ -170,7 +164,7 @@ rgb(37,80,0);
   text-align:lefts;
   align-items: center;
   font-size:1rem;
-  font-family:Saira;
+  font-family:'Saira', sans-serif;
 }
 .pokedex-tituloj {
   width: 15rem; /* Ancho deseado */
@@ -186,20 +180,148 @@ rgb(37,80,0);
   position: absolute;
   right:5rem;
 }
-/* #reset-button {
-    background-color: #90d55e;
-    color: rgb(255, 255, 255);
-    border: 1px solid #449c3c;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    position: absolute;
-    left: 45%;
-    }
-  
-  #reset-button:hover {
-    background-color: #7ad8cd;
-    border: 1px solid #41b1a5;
-  } */
+#reset-button {
+  background-color: #FFCE31;
+  color: #2F2E9A;
+  border: 0.1rem solid #2F2E9A;
+  padding: 0.2rem 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  font-size: 1rem;
+  font-family:'Saira', sans-serif;
+  }
+#reset-button:hover {
+  background-color: #f87e68;
+  color: #000000;
+  border: 0.1rem solid #000000;
+} 
 
+#calculo-stats {
+  background-color: #FFCE31;
+  color: #2F2E9A;
+  border: 0.1rem solid #2F2E9A;
+  align-items: center;
+  padding: 0.2rem 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  font-size: 1rem;
+  font-family:'Saira', sans-serif;
+  }
+#calculo-stats:hover {
+  background-color: #f87e68;
+  color: #000000;
+  border: 0.1rem solid #000000;
+} 
+
+#cerrar {
+  background-color: #FFCE31;
+  color: #2F2E9A;
+  border: 0.1rem solid #2F2E9A;
+  align-items: center;
+  padding: 0.2rem 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  font-size: 1rem;
+  font-family:'Saira', sans-serif;
+  }
+#cerrar:hover {
+  background-color: #f87e68;
+  color: #000000;
+  border: 0.1rem solid #000000;
+} 
+
+#filter-by {
+  display: block;
+  font-size: 1rem;
+  font-family: 'Saira', sans-serif;
+  color: #444;
+  line-height: 1.3em;
+  padding: .4em 1.4em .3em .8em;
+  width: 10.2rem;
+  max-width: 100%; 
+  box-sizing: border-box;
+  align-items: center;
+  border: 0.1rem solid #2F2E9A;
+  border-radius: .3em;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+    linear-gradient(to bottom, #ffffff 0%,#f7f7f7 100%);
+  background-repeat: no-repeat, repeat;
+  background-position: right .7em top 50%, 0 0;
+  background-size: .65em auto, 100%;
+}
+
+#select-sort2 {
+  display: block;
+  font-size: 1rem;
+  font-family: 'Saira', sans-serif;
+  color: #444;
+  line-height: 1.3em;
+  padding: .4em 1.4em .3em .8em;
+  width: 10.2rem;
+  max-width: 100%; 
+  box-sizing: border-box;
+  align-items: center;
+  border: 0.1rem solid #2F2E9A;
+  border-radius: .3em;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+    linear-gradient(to bottom, #ffffff 0%,#f7f7f7 100%);
+  background-repeat: no-repeat, repeat;
+  background-position: right .7em top 50%, 0 0;
+  background-size: .65em auto, 100%;
+}
+
+#select-sort3 {
+  display: block;
+  font-size: 1rem;
+  font-family: 'Saira', sans-serif;
+  color: #444;
+  line-height: 1.3em;
+  padding: .4em 1.4em .3em .8em;
+  width: 10.2rem;
+  max-width: 100%; 
+  box-sizing: border-box;
+  align-items: center;
+  border: 0.1rem solid #2F2E9A;
+  border-radius: .3em;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+    linear-gradient(to bottom, #ffffff 0%,#f7f7f7 100%);
+  background-repeat: no-repeat, repeat;
+  background-position: right .7em top 50%, 0 0;
+  background-size: .65em auto, 100%;
+}
+
+#select-sort4 {
+  display: block;
+  font-size: 1rem;
+  font-family: 'Saira', sans-serif;
+  color: #444;
+  line-height: 1.3em;
+  padding: .4em 1.4em .3em .8em;
+  width: 10.2rem;
+  max-width: 100%; 
+  box-sizing: border-box;
+  align-items: center;
+  border: 0.1rem solid #2F2E9A;
+  border-radius: .3em;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+    linear-gradient(to bottom, #ffffff 0%,#f7f7f7 100%);
+  background-repeat: no-repeat, repeat;
+  background-position: right .7em top 50%, 0 0;
+  background-size: .65em auto, 100%;
+}
